--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "scripts": {
     "build": "grunt",
     "build-watch": "grunt watch",
+    "lint:css": "stylelint '**/*.scss'",
+    "lint:css-fix": "stylelint '**/*.scss' --fix",
     "lint:js": "eslint assets/js --ext=js",
     "test": "cross-env NODE_CONFIG_DIR='./tests/e2e-tests/config' BABEL_ENV=commonjs mocha \"tests/e2e-tests\" --require babel-register --recursive",
     "test:grep": "cross-env NODE_CONFIG_DIR='./tests/e2e-tests/config' BABEL_ENV=commonjs mocha \"tests/e2e-tests\" --require babel-register --grep ",
@@ -53,6 +55,7 @@
     "mocha": "^5.2.0",
     "prettier": "github:automattic/calypso-prettier#c56b4251",
     "stylelint": "~9.2.1",
+    "stylelint-config-wordpress": "13.1.0",
     "wc-e2e-page-objects": "0.10.0"
   },
   "engines": {
